--- a/src/main/ui/ui/package.json
+++ b/src/main/ui/ui/package.json
@@ -6,7 +6,7 @@
     "@fullcalendar/core": "^5.5.0",
     "@fullcalendar/daygrid": "^5.5.0",
     "@fullcalendar/react": "^5.5.0",
-    "@material-ui/core": "^4.11.2",e
+    "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
